# mandate-finder

./: .env.example  .gitignore  .ralph-loop.env  Dockerfile  Dockerfile.frontend  Makefile  README.md  WORKFLOW.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  security-scan.yml
.opencode/tools/: linear_graphql.ts  overview.ts
.symphony/: workspace.json
alembic/: env.py
alembic/versions/: 0001_create_billing_tables.py  001_initial.py  002_add_ab_testing_tables.py  002_add_insights_tables.py  002_add_scrap_tables.py  002_billing_tables.py  003_add_search_profiles_tables.py  1fa663121e55_add_compliance_tables.py  1fa663121e55_placeholder_for_migration_chain.py  2a1b3c4d5e6f_add_job_posting_and_dedup_cache_tables.py  2a3b4c5d6e7f_add_ba_job_posting_columns.py  300529638d64_add_crm_metric_and_alert_tables.py  6854a07094ba_add_outreach_tables.py  eb697edb1fbb_add_job_postings_table.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: env.d.ts  main.ts
mandate_finder/: main.py
mandate_finder/api/: main.py  routes.py
mandate_finder/core/: config.py
mandate_finder/db/: session.py
mandate_finder/engine/: profile_matcher.py
mandate_finder/models/: __init__.py  job_posting.py  profile_match.py  search_profile.py
mandate_finder/schemas/: profile_match.py  search_profile.py
mandate_finder/scoring/: __init__.py  explainer.py  models.py  relevance_engine.py  scoring_weights.py  test_relevance.py
mandate_finder/scrapers/: __init__.py  hermes_agents.py  job_dedup.py  job_normalizer.py  job_scraper.py
mandate_finder/services/: profile_notifier.py
mandate_finder/workers/: bundesagentur_worker.py  job_scraper_worker.py  profile_matcher.py
scripts/: seed_demo.py
src/: config.py  database.py  main.py
src/api/: app.py  auth.py  deps.py  main.py
src/compliance/: consent_manager.py  data_governance.py  deletion_manager.py  encryption.py  events.py
src/core/: pagination.py  security.py
src/db/: database.py  models.py
src/mandate_finder/: config.py  database.py
src/mandate_finder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/market_intelligence/: api.py  main.py  models.py
src/middleware/: audit.py  feature_gating.py  rate_limit.py
src/models/: __init__.py  ab_test.py  billing.py  company.py  competitor.py
src/pipeline/: incremental_pipeline.py  pipeline_orchestrator.py
src/services/: ab_test_service.py  admin_metrics.py  competitor_insights.py  crm_service.py  webhook_service.py
src/workers/: admin_alert.py  dunning.py  health.py  outreach.py  pipeline_worker.py  reply_detector.py  signal_aggregator.py
templates/: market_intelligence.html
tests/: conftest.py  test_ab_test_service.py  test_ab_testing.py  test_admin.py  test_admin_alert.py  test_api.py  test_apollo.py  test_auth.py  test_ba_integration.py  test_billing.py  test_bundesagentur.py  test_competitor_insights.py  test_compliance.py  test_crm.py  test_crm_mocked.py  test_dedup.py  test_e2e.py  test_early_signal_scraper.py  test_engine.py  test_export.py  test_industry_classifier.py  test_insights.py  test_notification.py  test_notifier.py  test_optimal_send_time.py  test_outreach.py  test_pipeline.py  test_plans.py  test_reply_detector.py  test_report_generator.py  test_scoring.py  test_scraping.py  test_team.py  test_trend_detector.py  test_vat.py
tests/fixtures/: ba_jobs_response.xml  indeed_de_job_listing.html  stepstone_job_listing.html  (+1 more)
(+118 files in other folders)
