[project]
name = "market-intelligence"
version = "0.1.0"
description = "Market intelligence & trend detection for mandate-finder"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "numpy>=1.24",
    "scipy>=1.10",
    "httpx>=0.25",
    "pydantic>=2.0",
    "pandas>=2.0",
    "python-dateutil>=2.8",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "ruff>=0.1",
    "mypy>=1.5",
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
