[project]
name = "mandate-finder"
version = "0.1.0"
description = "Multi-Profile Search Engine — Parallel Job Discovery for HR"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "alembic>=1.13.0",
    "pyjwt>=2.8.0",
    "taskiq>=0.11.0",
    "taskiq-fastapi>=0.5.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiosqlite>=0.20.0",
    "cryptography>=42.0.0",
    "taskiq-aio-pika>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.33.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "coverage>=7.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]
ignore = ["B008", "E501"]
per-file-ignores = {"tests/*" = ["ARG001", "ARG002"]}

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["mandate_finder*"]
exclude = ["skills*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
